# IoT-Payment-Network

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/workflows/: ci.yml
api/: .env.example  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: index.ts
api/src/__tests__/: index.test.ts
api/src/controllers/: authController.ts  deviceController.ts  didController.ts  sessionController.ts  stellarController.ts
api/src/middleware/: auth.ts  errorHandler.ts  notFound.ts  validation.ts
api/src/routes/: auth.ts  devices.ts  did.ts  sessions.ts  stellar.ts
api/src/services/: websocket.ts
api/src/types/: validation.ts
api/src/utils/: logger.ts
contracts/: Cargo.toml  Makefile  README.md
contracts/src/: lib.rs  test.rs
identity/: README.md  package.json  tsconfig.json
identity/src/: credentials.ts  did.ts  index.ts  types.ts  utils.ts
identity/src/__tests__/: index.test.ts
web/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.js
web/src/__tests__/: index.test.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: account-balance.tsx  activity-feed.tsx  dashboard.tsx  device-manager.tsx  identity-manager.tsx  overview.tsx  providers.tsx  session-manager.tsx
web/src/components/ui/: toaster.tsx
web/src/lib/: utils.ts
